# DeepSky-Classifier

./: .gitignore  README.md  pyproject.toml
src/core/: config.py  database.py  integrity.py  models.py  schemas.py
src/etl/: crossmatch.py  federated.py  ingest.py  persist.py  validate.py
src/etl/catalogs/: base.py  gaia.py  sdss.py
src/ml/: evaluate.py  features.py  train.py
src/utils/: logger.py
src/workflows/: pipeline.py
tests/: test_crossmatch.py  test_features.py  test_gaia_job_identifier.py  test_persist.py  test_query.py  test_schemas.py
